--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -58,7 +58,7 @@
             android:gravity="center"
             android:paddingBottom="7dp"
             android:paddingTop="7dp"
-            android:text="@string/register"
+            android:text="@string/logout"
             android:textColor="@android:color/black"
             android:textSize="18sp" />
 
